<resources>
    <string name="app_name">TbcExercises</string>
    <string name="retry">Retry</string>
    <string name="timeout">Timeout</string>
    <string name="cart">Cart</string>
    <string name="home">Home</string>
    <string name="favourites">Favourites</string>

    <string name="english">English</string>
    <string name="georgian">ქართული</string>

    <string name="error_empty_name">Name cannot be empty</string>
    <string name="error_empty_email">Email cannot be empty</string>
    <string name="error_invalid_email">Please enter a valid email address</string>
    <string name="error_weak_password">Password must be at least 6 characters</string>
    <string name="register">register</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="repeat_password">repeat password</string>
    <string name="username">Username</string>
    <string name="don_t_have_account_sign_up">Don\'t Have Account? <u>Sign up</u> </string>
    <string name="login">Login</string>
    <string name="remember_me">remember me</string>
    <string name="error_password_mismatch">passwords should be same</string>
    <string name="app_nickname">ForSales</string>
    <string name="save_money">save money</string>
    <string name="logout">Logout</string>
    <string name="account">Account</string>
    <string name="money_format">₾  %1$s</string>
    <string name="successfully_deleted_item">Successfully deleted item</string>
    <string name="undo">Undo</string>
    <string name="search">Search</string>
    <string name="search_here">Search here…</string>
    <string name="total">Total :</string>
    <string name="you_don_t_have_favourites_add_them_from_home_screen">You don\'t have favourites add them from home screen</string>
    <string name="there_is_no_product_in_a_cart_add_them_from_home_screen">There is no product in a cart add them from home screen</string>
    <string name="you_don_t_have_internet_connection">You don\'t have internet connection</string>
    <string name="max_favourite_product_count">You can only have up to 15 Favourite Products</string>
    <string name="max_cart_product_count">You can only have up to 25 product in cart</string>
    <string name="email_is_already_used">Email is Already used</string>
    <string name="unknown_error">Unknown error</string>
    <string name="sign_up_failed">Sign-up failed</string>
    <string name="error_wrong_password">Incorrect password</string>
    <string name="error_user_not_found">No account found with this email and password</string>
    <string name="user_not_found">User not found</string>
    <string name="field_shoud_not_be_empty">Field should not be empty</string>
    <string name="feature_is_only_avaliable_when_online">Feature is only avaliable when online</string>
</resources>
